--- a/知识表示学习演讲稿.md
+++ b/知识表示学习演讲稿.md
@@ -24,9 +24,9 @@
 
 关于词表示， 其中有两种较为常见的模型
 
-**一种是连续词袋模型（CBOW）， 根据上下文，推测中心词的概率。**
+**一种是连续词袋模型（CBOW）， 根据上下文，推测中心词出现的概率。**
 
-**一种是skip-gram 模型，根据中心词，推测上下文的概率。**
+**一种是skip-gram 模型，根据中心词，推测上下文出现的概率。**
 
 **softmax分类器用来归一化输出单元的概率**
 
